data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_709.wast
;; 10. Develop a loop where `br_if` instructions are dependent on pseudo-randomly generated stack values. Verify consistent correct branching by checking the pseudo-randomly determined results influence conditional exits without any misinterpretation.

(assert_invalid
  (module (func $random_br_if
    (local i32 i32)
    (i32.const 42)
    (local.set 0)
    (i32.const 0)
    (local.set 1)
    (loop (result i32)
      (local.get 0)
      (local.get 1)
      (i32.rem_u (i32.const 2))
      (i32.eqz)
      (br_if 1)
      (local.get 0)
      (local.set 1)
      (br 0)
    )
  ))
  "type mismatch"
)